<resources>
    <string name="app_name">MyContentProvider</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="grade">Grade</string>
    <string name="add_name">Add Name</string>
    <string name="retrieve_students">Retrieve Students</string>
    <string name="update_student">Update Student</string>
    <string name="delete_student">Delete Student</string>
    <string name="name_hint">Enter Student Name</string>
    <string name="grade_hint">Enter Student Grade</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
</resources>
